--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@apollo/client": "^3.6.6",
     "@constellation-labs/bedrock-sdk": "^1.1.2",
     "@eth-optimism/sdk": "^3.1.4",
-    "@floating-ui/react-dom": "^0.5.0",
-    "@floating-ui/dom": "^0.3.1",
     "@floating-ui/core": "^0.5.1",
+    "@floating-ui/dom": "^0.3.1",
+    "@floating-ui/react-dom": "^0.5.0",
     "@layerzerolabs/scan-client": "^0.0.6",
+    "@metamask/detect-provider": "^2.0.0",
     "@metamask/onboarding": "^1.0.1",
+    "@safe-global/safe-apps-provider": "^0.18.2",
+    "@safe-global/safe-apps-sdk": "^9.0.0",
     "@splinetool/react-spline": "^2.2.5",
     "@splinetool/runtime": "^0.9.200",
     "@uniswap/v3-sdk": "^3.10.0",
@@ -28,13 +31,13 @@
     "antd": "^4.18.9",
     "antd-mobile": "^5.13.1",
     "assert": "^2.0.0",
-    "buffer": "^6.0.3",
     "bn.js": "^5.2.1",
+    "buffer": "^6.0.3",
     "colord": "^2.9.2",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.10.8",
     "decimal.js": "^10.3.1",
-    "echarts": "^5.3.1",
+    "echarts": "^5.5.0",
     "ethers": "^5.5.4",
     "fortmatic": "^2.4.0",
     "graphql": "^16.5.0",
@@ -52,11 +55,13 @@
     "react-app-rewired": "^2.2.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-input-verification-code": "^1.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.2",
     "rxjs": "^7.5.4",
     "stream-browserify": "^3.0.0",
     "superagent": "^7.1.1",
+    "ts-node": "^10.9.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -76,8 +81,8 @@
     "@types/history": "^5.0.0",
     "@types/identicon.js": "^2.3.1",
     "@types/lodash": "^4.14.179",
-    "@types/numeral": "^2.0.2",
     "@types/node": "18.11.17",
+    "@types/numeral": "^2.0.2",
     "@types/qrcode.react": "^1.0.2",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.39",
@@ -89,6 +94,7 @@
     "babel-plugin-import": "^1.13.3",
     "circular-dependency-plugin": "^5.2.2",
     "cross-env": "^7.0.3",
+    "css-loader": "6.7.3",
     "customize-cra": "^1.0.0",
     "eslint": "8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -96,33 +102,32 @@
     "gh-pages": "^3.2.3",
     "git-rev-sync": "^3.0.2",
     "hard-source-webpack-plugin": "^0.13.1",
+    "html-webpack-plugin": "5.5.0",
     "husky": "^7.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lint-staged": "^12.3.5",
+    "mini-css-extract-plugin": "2.7.2",
     "node-xlsx": "^0.21.0",
+    "postcss-flexbugs-fixes": "5.0.2",
     "postcss-less": "^6.0.0",
+    "postcss-loader": "6.2.1",
+    "postcss-normalize": "10.0.1",
+    "postcss-preset-env": "7.8.3",
     "prettier": "^2.5.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewire-multiple-entry": "^2.2.2",
+    "react-dev-utils": "12.0.1",
     "react-hot-loader": "^4.13.0",
     "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "^5.0.0",
+    "style-loader": "3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-prettier": "^2.0.0",
     "typescript": "^4.9.5",
-    "webpack": "5.88.1",
-    "html-webpack-plugin": "5.5.0",
-    "react-dev-utils": "12.0.1",
-    "mini-css-extract-plugin": "2.7.2",
-    "postcss-normalize": "10.0.1",
-    "style-loader": "3.3.1",
-    "css-loader":"6.7.3",
-    "postcss-loader": "6.2.1",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-preset-env": "7.8.3"
+    "webpack": "5.88.1"
   },
   "browserslist": {
     "production": [
